--- a/compras.html
+++ b/compras.html
@@ -21,13 +21,13 @@
 
 	<nav>
 		<ul class="menu">
-			<li><a href="" onclick="cargarPagina('/')">Inicio</a></li>
-			<li><a href="informacion.html" onclick="cargarPagina('informacion')">Información</a></li>
-			<li><a href="serviciosPrecios.html" onclick="cargarPagina('serviciosPrecios')">Servicio y Precios</a></li>
+			<li><a href="">Inicio</a></li>
+			<li><a href="informacion.html">Información</a></li>
+			<li><a href="serviciosPrecios.html">Servicio y Precios</a></li>
 		</ul>
 
 		<ul class="menu-sesion">
-			<li><a href="iniciarSesion.html" style="float: right;" onclick="cargarPAgina('login')">Iniciar sesión</a></li>
+			<li><a href="iniciarSesion.html" style="float: right;">Iniciar sesión</a></li>
 		</ul>
 	</nav>
 
@@ -69,7 +69,7 @@
                 <option value="opcion3">02/06/2024</option>
             </select>
 
-            <input type="submit" value="Proceder" onclick="crearInstructor()">
+            <input type="submit" value="Proceder">
         </form>
     </div>
 
