--- a/cursos.html
+++ b/cursos.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<!DOCTYPE html>
 <html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Inicio Perfil</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <script src="js/index.js" defer></script>
 </head>
 
-<body>
-    <header class="encabezado">
+<body onload="leerCursos()">
+    <header class="encabezado"> 
         <div class="contenedor-logo">
             <img src="img/logoT.png" alt="Coyotes Neza" class="logo">
             <h1>CF Coyotes Neza</h1>
+        </div> 
+
+        <div class="foto-perfil">
+            <p>Alfredo Manjarrez Vázquez</p>
+            <img src="img/Alfredo.png" alt="Coyotes Neza" width="150" height="120">
         </div>
     </header>
-
+    
     <nav>
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
@@ -29,28 +32,31 @@
         </ul>
 
         <ul class="menu-sesion">
-            <li><a href="">Iniciar sesión</a>
-            </li>
+            <li><a href="nuevoCurso.html">Nuevo Registro Curso</a></li>
+            <li><a href="index.html">Cerrar sesión</a></li>
         </ul>
     </nav>
 
-    <main>
-        <h2>Iniciar sesión</h2>
+    <div class="contenedor-tabla">
+        <table id="tabla" class="tabla">
+            <thead class="tabla-encabezado">
+                <tr>
+                    <th>Matricula</th>
+                    <th>Curso </th>
+                    <th>Instructor</th>
+                    <th>Horario</th>
+                    <th>Nivel de curso</th>
+                    <th>Fecha de inicio</th>
+                    <th>Eliminar </th>
+                    <th>Editar</th>
+                </tr>
+            </thead>
 
-        <form action="/cursos.html" method="post">
-            <div class="contenedor-input">
-                <label for="email">Correo electronico:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-
-            <div class="contenedor-input">
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
+            <tbody id="cuerpoTabla" class="tabla-cuerpo">
+            </tbody>
             
-            <input type="submit" value="Iniciar sesión">
-        </form>
-    </main>
+        </table>
+    </div>
 
     <footer class="footer">
         <div>
@@ -60,7 +66,5 @@
             <td> &#169; Quantum Coder's derechos reservados</td>
         </div>
     </footer>
-
 </body>
-
 </html>
