--- a/informacion.html
+++ b/informacion.html
@@ -20,13 +20,13 @@
 
     <nav>
         <ul class="menu">
-            <li><a href="index.html" onclick="cargarPagina('/')">Inicio</a></li>
-            <li><a href="" onclick="cargarPagina('informacion')">Información</a></li>
-            <li><a href="serviciosPrecios.html" onclick="cargarPagina('serviciosPrecios')">Servicio y Precios</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="">Información</a></li>
+            <li><a href="serviciosPrecios.html">Servicio y Precios</a></li>
         </ul>
 
         <ul class="menu-sesion">
-            <li><a href="iniciarSesion.html" style="float: right;" onclick="cargarPAgina('login')">Iniciar sesión</a>
+            <li><a href="iniciarSesion.html">Iniciar sesión</a>
             </li>
         </ul>
     </nav>
