Add enrollments and courses

--- a/cursos.html
+++ b/cursos.html
@@ -32,6 +32,8 @@
         </ul>
 
         <ul class="menu-sesion">
+            <li><a href="cursos.html">Ver cursos</a></li>
+            <li><a href="inscripciones.html">Ver inscripciones</a></li>
             <li><a href="nuevoCurso.html">Nuevo Registro Curso</a></li>
             <li><a href="index.html">Cerrar sesión</a></li>
         </ul>
