--- a/iniciarSesion.html
+++ b/iniciarSesion.html
@@ -37,7 +37,7 @@
     <main>
         <h2>Iniciar sesión</h2>
 
-        <form action="/cursos.html" method="post">
+        <form action="cursos.html" method="post">
             <div class="contenedor-input">
                 <label for="email">Correo electronico:</label>
                 <input type="email" id="email" name="email" required>
