--- a/serviciosPrecios.html
+++ b/serviciosPrecios.html
@@ -33,57 +33,81 @@
     <main class="contenedor-clases">
         <div class="clase">
             <h2><b>Principiantes (Blancas, Naranjas y Amarillas)</b></h2>
-            <p>Infantil y Juvenil</p>
-            <p>Martes 5 a 6:30pm, Miércoles 7 a 8pm, Viernes 6 a 7pm</p>
-            <p>$300 por mes</p>
+            <div>
+                <p>Infantil y Juvenil</p>
+                <p>Martes 5 a 6:30pm, Miércoles 7 a 8pm, Viernes 6 a 7pm</p>
+                <p>$300 por mes</p>
+            </div>
+            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
         </div>
 
         <div class="clase">
             <h2><b>Avanzados (Rojas y Negras)</b></h2>
-            <p>Infantil y Juvenil</p>
-            <p>Lunes 7 a 8pm, Martes a Viernes 8 a 9pm</p>
-            <p>$350 por mes</p>
+            <div>
+                <p>Infantil y Juvenil</p>
+                <p>Lunes 7 a 8pm, Martes a Viernes 8 a 9pm</p>
+                <p>$350 por mes</p>
+            </div>
+            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
         </div>
 
         <div class="clase">
             <h2><b>Matutino</b></h2>
-            <p>Preescolar, Infantil, Juvenil y Adultos. Todos los grados</p>
-            <p>Lunes, Miércoles y Viernes de 8:30 a 10:00am</p>
-            <p>$270 por mes</p>
+            <div>
+                <p>Preescolar, Infantil, Juvenil y Adultos. Todos los grados</p>
+                <p>Lunes, Miércoles y Viernes de 8:30 a 10:00am</p>
+                <p>$270 por mes</p>
+            </div>
+            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
         </div>
 
         <div class="clase">
             <h2><b>Intermedios (Verdes y Azules)</b></h2>
-            <p>Infantil y Juvenil</p>
-            <p>Martes 6:30 a 8pm, Miércoles 7 a 8pm, Viernes 7 a 8pm</p>
-            <p>$330 por mes</p>
+            <div>
+                <p>Infantil y Juvenil</p>
+                <p>Martes 6:30 a 8pm, Miércoles 7 a 8pm, Viernes 7 a 8pm</p>
+                <p>$330 por mes</p>
+            </div>
+            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
         </div>
 
         <div class="clase">
             <h2><b>Adultos</b></h2>
-            <p>De 18 años en adelante. Todos los grados</p>
-            <p>Lunes, Miércoles y Jueves de 8 a 9pm</p>
-            <p>$300 por mes</p>
+            <div>
+                <p>De 18 años en adelante. Todos los grados</p>
+                <p>Lunes, Miércoles y Jueves de 8 a 9pm</p>
+                <p>$300 por mes</p>
+            </div>
+            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
         </div>
 
         <div class="clase">
             <h2><b>Preescolares</b></h2>
-            <p>De 3 años a 6 años</p>
-            <p>Lunes, Miércoles y Jueves de 6 a 7pm</p>
-            <p>$300 por mes</p>
+            <div>
+                <p>De 3 años a 6 años</p>
+                <p>Lunes, Miércoles y Jueves de 6 a 7pm</p>
+                <p>$300 por mes</p>
+            </div>
+            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
         </div>
 
         <div class="clase">
             <h2><b>Paga por clase</b></h2>
-            <p>A partir de 13 años de edad, ven y cuida tu cuerpo</p>
-            <p>$30 por clase</p>
+            <div>
+                <p>A partir de 13 años de edad, ven y cuida tu cuerpo</p>
+                <p>$30 por clase</p>
+            </div>
+            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
         </div>
 
         <div class="clase">
             <h2><b>Paga por mes</b></h2>
-            <p>Cuida tu salud haciendo ejercicio en familia</p>
-            <p>Lunes a Sábado de 8 a 11am. Lunes a Viernes de 5 a 9pm</p>
-            <p>$300 por mes</p>
+            <div>
+                <p>Cuida tu salud haciendo ejercicio en familia</p>
+                <p>Lunes a Sábado de 8 a 11am. Lunes a Viernes de 5 a 9pm</p>
+                <p>$300 por mes</p>
+            </div>
+            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
         </div>
     </main>
 
