--- a/nuevoCurso.html
+++ b/nuevoCurso.html
@@ -7,7 +7,7 @@
     <title>Registro</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/crearCurso.js" defer></script>
+    <script src="js/index.js" defer></script>
 </head>
 
 <body>
@@ -31,6 +31,8 @@
         </ul>
 
         <ul class="menu-sesion">
+            <li><a href="cursos.html">Ver cursos</a></li>
+            <li><a href="inscripciones.html">Ver inscripciones</a></li>
             <li><a href="nuevoCurso.html">Nuevo Registro Curso</a></li>
             <li><a href="index.html">Cerrar sesión</a></li>
         </ul>
@@ -39,7 +41,7 @@
     <main>
         <h1 class="title">Registro de Cursos</h1>
 
-        <form method="POST" onsubmit="crearCurso()">
+        <form action="cursos.html" method="POST">
             <div class="contenedor-input">
                 <label for="nombre_curso">Nombre del curso:</label>
                 <input type="text" id="nombre_curso" name="nombre_curso" required>
@@ -70,7 +72,7 @@
                 <input type="date" id="fecha_inicio" name="fecha_inicio" required>
             </div>
 
-            <input type="submit" value="Registrar Curso">
+            <input type="submit" value="Registrar Curso" onclick="crearCurso()">
         </form>
     </main>
 
