--- a/serviciosPrecios.html
+++ b/serviciosPrecios.html
@@ -38,7 +38,7 @@
                 <p>Martes 5 a 6:30pm, Miércoles 7 a 8pm, Viernes 6 a 7pm</p>
                 <p>$300 por mes</p>
             </div>
-            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
+            <a href="nuevaInscripcion.html" class="boton">¡Quiero inscribirme!</a>
         </div>
 
         <div class="clase">
@@ -48,7 +48,7 @@
                 <p>Lunes 7 a 8pm, Martes a Viernes 8 a 9pm</p>
                 <p>$350 por mes</p>
             </div>
-            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
+            <a href="nuevaInscripcion.html" class="boton">¡Quiero inscribirme!</a>
         </div>
 
         <div class="clase">
@@ -58,7 +58,7 @@
                 <p>Lunes, Miércoles y Viernes de 8:30 a 10:00am</p>
                 <p>$270 por mes</p>
             </div>
-            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
+            <a href="nuevaInscripcion.html" class="boton">¡Quiero inscribirme!</a>
         </div>
 
         <div class="clase">
@@ -68,7 +68,7 @@
                 <p>Martes 6:30 a 8pm, Miércoles 7 a 8pm, Viernes 7 a 8pm</p>
                 <p>$330 por mes</p>
             </div>
-            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
+            <a href="nuevaInscripcion.html" class="boton">¡Quiero inscribirme!</a>
         </div>
 
         <div class="clase">
@@ -78,7 +78,7 @@
                 <p>Lunes, Miércoles y Jueves de 8 a 9pm</p>
                 <p>$300 por mes</p>
             </div>
-            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
+            <a href="nuevaInscripcion.html" class="boton">¡Quiero inscribirme!</a>
         </div>
 
         <div class="clase">
@@ -88,7 +88,7 @@
                 <p>Lunes, Miércoles y Jueves de 6 a 7pm</p>
                 <p>$300 por mes</p>
             </div>
-            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
+            <a href="nuevaInscripcion.html" class="boton">¡Quiero inscribirme!</a>
         </div>
 
         <div class="clase">
@@ -97,7 +97,7 @@
                 <p>A partir de 13 años de edad, ven y cuida tu cuerpo</p>
                 <p>$30 por clase</p>
             </div>
-            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
+            <a href="nuevaInscripcion.html" class="boton">¡Quiero inscribirme!</a>
         </div>
 
         <div class="clase">
@@ -107,7 +107,7 @@
                 <p>Lunes a Sábado de 8 a 11am. Lunes a Viernes de 5 a 9pm</p>
                 <p>$300 por mes</p>
             </div>
-            <a href="nuevaInscripcion.html" class="boton">Inscribirse</a>
+            <a href="nuevaInscripcion.html" class="boton">¡Quiero inscribirme!</a>
         </div>
     </main>
 
