--- a/inscripciones.html
+++ b/inscripciones.html
@@ -44,12 +44,13 @@
             <thead class="tabla-encabezado">
                 <tr>
                     <th>Id</th>
+                    <th>Nombre</th>
+                    <th>Correo</th>
                     <th>Curso</th>
                     <th>Instructor</th>
                     <th>Nivel</th>
                     <th>Horario</th>
                     <th>Eliminar </th>
-                    <th>Editar</th>
                 </tr>
             </thead>
 
