--- a/nuevaInscripcion.html
+++ b/nuevaInscripcion.html
@@ -27,9 +27,6 @@
 		</ul>
 
 		<ul class="menu-sesion">
-            <li><a href="cursos.html">Ver cursos</a></li>
-            <li><a href="inscripciones.html">Ver inscripciones</a></li>
-            <li><a href="nuevoCurso.html">Nuevo Registro Curso</a></li>
 			<li><a href="iniciarSesion.html" style="float: right;">Iniciar sesión</a></li>
 		</ul>
 	</nav>
@@ -37,20 +34,30 @@
     <main>
         <h1>Inscripción a cursos</h1>
         
-        <form action="inscripciones.html" method="POST">
+        <form action="inscrito.html" method="POST">
+            <div class="contenedor-input">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+            </div>
+
+            <div class="contenedor-input">
+                <label for="correo">Correo:</label>
+                <input type="email" id="correo" name="correo" required> 
+            </div>
+
             <div class="contenedor-input">
                 <label for="curso">Curso:</label>
-                <select id="curso" name="curso">
+                <select id="curso" name="curso" required>
                     <option value="" hidden>-Seleccione un curso-</option>
-                    <option value="opcion1">Acondicionamiento Físico</option>
-                    <option value="opcion2">Defensa Personal</option>
-                    <option value="opcion3">Competición</option>
+                    <option value="Acondicionamiento Fisico">Acondicionamiento Físico</option>
+                    <option value="Defensa Personal">Defensa Personal</option>
+                    <option value="Competicion">Competición</option>
                 </select>
             </div>
 
             <div class="contenedor-input">
                 <label for="instructores">Instructor:</label>
-                <select id="instructor" name="instructor">
+                <select id="instructor" name="instructor" required>
                     <option value="" hidden>-Seleccione un instructor-</option>
                     <option value="Emiliano Rivas">Emiliano Rivas</option>
                     <option value="Arturo Ramirez">Arturo Ramirez</option>
@@ -60,7 +67,7 @@
 
             <div class="contenedor-input">
                 <label for="nivel">Nivel:</label>
-                <select id="nivel" name="nivel">
+                <select id="nivel" name="nivel" required>
                     <option value="" hidden>-Seleccione un nivel-</option>
                     <option value="Principiante">Principiante</option>
                     <option value="Intermedio">Intermedio</option>
@@ -70,7 +77,7 @@
 
             <div class="contenedor-input">
                 <label for="horario">Horario:</label>
-                <select id="horario" name="horario">
+                <select id="horario" name="horario" required>
                     <option value="" hidden>-Seleccione un horario-</option>
                     <option value="14:00 - 16:00">14:00 - 16:00</option>
                     <option value="11:00 - 13:00">11:00 - 13:00</option>
@@ -78,7 +85,22 @@
                 </select>
             </div>
 
-            <input type="submit" value="Proceder" onclick="crearInscripcion()">
+            <div class="contenedor-tarjeta">
+                <div class="contenedor-input">
+                    <label for="tarjeta">Número de tarjeta:</label>
+                    <input type="number" id="tarjeta" name="tarjeta" pattern="[0-9]{16}" required>
+                </div>
+                <div class="contenedor-input">
+                    <label for="vencimiento">Fecha de vencimiento:</label>
+                    <input type="month" id="vencimiento" name="vencimiento" required>
+                </div>
+                <div class="contenedor-input">
+                    <label for="cvv">CVV:</label>
+                    <input type="number" id="cvv" name="cvv" pattern="[0-9]{3}" required>
+                </div>
+            </div>
+
+            <input type="submit" value="Inscribirme" onclick="crearInscripcion()">
         </form>
     </main>
 
